My_Python_Notebook：itertools-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1003,4 +1003,10 @@ A ['A', 'A', 'a']
 
 ---
 
+### 小结
 
+`itertools` 模块提供的全部是处理迭代功能的函数，它们的返回值不是 `list`，而是 `Iterator`，也即它们的值不是立刻计算出放在内存中的，只有进行迭代时（例如使用 `for` 循环）才会被真正计算出来。
+
+---
+
+<br>
