--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1010,3 +1010,31 @@ A ['A', 'A', 'a']
 ---
 
 <br>
+
+## contextlib
+
+### 引言
+
+在Python中，**读写文件要注意使用完毕后必须进行关闭**（文件对象占用大量资源并且同一时间操作系统只能打开有限数量的文件）。在[09IO编程](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/09IO%E7%BC%96%E7%A8%8B.md)中，已经介绍了利用 `try...finally` 机制关闭文件资源的方法：
+
+```python
+try:
+    f = open('/path/to/file', 'r')
+    f.read()
+finally:
+    if f:
+        f.close()
+```
+
+但是，写 `try...finally` 非常繁琐，所以后续又介绍了使用 `with` 语句的方法。`with` 语句允许我们非常方便地使用资源，而不必担心资源没有关闭。使用 `with` 语句改写后，上面的代码就可以简化为：
+
+```python
+with open('/path/to/file', 'r') as f:
+    f.read()
+```
+
+事实上，并不是只有 `open()` 函数返回的文件对象才能使用 `with` 语句。**任何对象，只要正确实现了上下文管理，就可以用于 `with` 语句**。
+
+---
+
+
