My_Python_Notebook：contextlib-上下文管理的实现

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1037,4 +1037,36 @@ with open('/path/to/file', 'r') as f:
 
 ---
 
+### 上下文管理的实现
+
+上下文管理是通过 `__enter__` 和 `__exit__` 这两个方法实现的。下面的类就实现了这两个方法：
+
+```python
+class Query(object):
+
+    def __init__(self, name):
+        self.name = name
+
+    def __enter__(self):
+        print('Begin')
+        return self
+
+    def __exit__(self, exc_type, exc_value, traceback):
+        if exc_type:
+            print('Error')
+        else:
+            print('End')
+
+    def query(self):
+        print('Query info about %s...' % self.name)
+```
+
+这样我们就可以把自己写的资源对象用于 `with` 语句：
+
+```python
+with Query('Bob') as q:
+    q.query()
+```
+
+---
 
