My_Python_Notebook：contextlib-@contextmanager

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1070,3 +1070,69 @@ with Query('Bob') as q:
 
 ---
 
+### @contextmanager
+
+编写 `__enter__` 和 `__exit__` 还是太繁琐了，有没有更简单的办法呢？有！Python的标准库 `contextlib` 提供了更简单的写法，借助它，上面的代码可以改写为：
+
+```python
+from contextlib import contextmanager
+
+class Query(object):
+    def __init__(self, name):
+        self.name = name
+    def query(self):
+        print('Query info about %s...' % self.name)
+
+@contextmanager
+def create_query(name):
+    print('Begin')
+    q = Query(name)
+    yield q
+    print('End')
+```
+
+简单解析一下，我们定义一个简单的 `Query` 类，只有一个 `query()` 方法。同时我们定义了一个 `create_query()` 函数，由于这个函数包含 `yield` 关键字，所以实际上它是一个生成器。不过这个生成器只生成和抛出一个 `Query` 类的对象。
+
+`@contextmanager` 这个装饰器**接收一个生成器，并为生成器抛出的对象添加上下文管理的功能**。这样 `with` 语句就可以正常地工作了：
+
+```python
+with create_query('Bob') as q:
+    q.query()
+```
+
+很多时候，我们希望在某段代码执行前后自动执行特定代码，也可以用 `@contextmanager` 实现。例如：
+
+```python
+@contextmanager
+def tag(name):
+    print("<%s>" % name)
+    yield
+    print("</%s>" % name)
+
+with tag("h1"):
+    print("hello")
+    print("world")
+```
+
+上述代码执行结果为：
+
+```html
+<h1>
+hello
+world
+</h1>
+```
+
+代码的执行顺序是：
+
+- `with` 语句首先执行 `yield` 前面的语句，因此打印出 `<h1>`；
+- `yield` 之后会跳出生成器（`tag()` 函数），执行 `with` 语句内部的所有语句，因此打印出 `hello` 和 `world`；
+- 执行完 `with` 语句内部的所有语句继续回到生成器；
+- 执行 `yield` 后面的语句，打印出 `</h1>`；
+- 此时生成器所有语句执行完毕，不再生成，结束上下文。
+
+借助 `@contextmanager` 装饰器，我们能够更加方便地实现上下文管理。
+
+---
+
+
