My_Python_Notebook：contextlib-closing函数

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1070,7 +1070,7 @@ with Query('Bob') as q:
 
 ---
 
-### @contextmanager
+### @contextmanager装饰器
 
 编写 `__enter__` 和 `__exit__` 还是太繁琐了，有没有更简单的办法呢？有！Python的标准库 `contextlib` 提供了更简单的写法，借助它，上面的代码可以改写为：
 
@@ -1135,4 +1135,42 @@ world
 
 ---
 
+### closing函数
 
+前面一节介绍了如何为一个对象实现上下文管理功能，使得它能被作用于 `with` 语句。但是，得自己编写一个生成器还是很麻烦！有没有更更方便的办法呢？有！我们可以用 `closing()` 方法！
+
+`closing()` 的本质如下：
+
+```python
+@contextmanager
+def closing(thing):
+    try:
+        yield thing
+    finally:
+        thing.close()
+```
+
+其实它就是一个经过 `@contextmanager` 装饰的生成器，它的作用就是把任意对象变为上下文对象，使其支持 `with` 语句。
+
+再改写一次上面 `Query` 的例子：
+
+```python
+from contextlib import closing
+
+class Query(object):
+    def __init__(self, name):
+        self.name = name
+    def query(self):
+        print('Query info about %s...' % self.name)
+
+with closing(Query('Bob')) as q:
+    q.query()
+```
+
+这次更加简单了~
+
+`@contextlib` 还有一些其他装饰器，可以帮助我们编写更简洁的代码。
+
+---
+
+<br>
