My_Python_Notebook：xml-简介

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1174,3 +1174,12 @@ with closing(Query('Bob')) as q:
 ---
 
 <br>
+
+## XML
+
+### 简介
+
+XML虽然比JSON复杂，在Web中应用也不如以前多了，不过仍然有很多地方会用到XML，所以我们有必要了解如何在Python中如何处理XML。
+
+---
+
