My_Python_Notebook：xml-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1289,4 +1289,10 @@ return ''.join(L)
 
 ---
 
+### 小结
+
+解析XML时，注意找出自己感兴趣的节点，响应事件时，可以先把节点中的数据保存起来，等待解析完毕后，再进行处理。对这一章所用模块知识感兴趣的话可以查看[官方文档](https://docs.python.org/3/library/pyexpat.html#module-xml.parsers.expat)。
+
+---
+
 
