My_Python_Notebook：xml-练习

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1295,4 +1295,105 @@ return ''.join(L)
 
 ---
 
+### 练习
 
+> 编写程序使用SAX解析[Yahoo天气RSS](http://weather.yahooapis.com/forecastrss?u=c&w=2151330)的XML格式天气预报，获取地点、当天天气和次日天气：
+
+由于现在Yahoo天气已经不再提供这个RSS服务了，所以链接已经失效了。这里我们直接解析一个廖老师提供好的XML字符串：
+
+```python
+data = r'''<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<rss version="2.0" xmlns:yweather="http://xml.weather.yahoo.com/ns/rss/1.0" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#">
+    <channel>
+        <title>Yahoo! Weather - Beijing, CN</title>
+        <lastBuildDate>Wed, 27 May 2015 11:00 am CST</lastBuildDate>
+        <yweather:location city="Beijing" region="" country="China"/>
+        <yweather:units temperature="C" distance="km" pressure="mb" speed="km/h"/>
+        <yweather:wind chill="28" direction="180" speed="14.48" />
+        <yweather:atmosphere humidity="53" visibility="2.61" pressure="1006.1" rising="0" />
+        <yweather:astronomy sunrise="4:51 am" sunset="7:32 pm"/>
+        <item>
+            <geo:lat>39.91</geo:lat>
+            <geo:long>116.39</geo:long>
+            <pubDate>Wed, 27 May 2015 11:00 am CST</pubDate>
+            <yweather:condition text="Haze" code="21" temp="28" date="Wed, 27 May 2015 11:00 am CST" />
+            <yweather:forecast day="Wed" date="27 May 2015" low="20" high="33" text="Partly Cloudy" code="30" />
+            <yweather:forecast day="Thu" date="28 May 2015" low="21" high="34" text="Sunny" code="32" />
+            <yweather:forecast day="Fri" date="29 May 2015" low="18" high="25" text="AM Showers" code="39" />
+            <yweather:forecast day="Sat" date="30 May 2015" low="18" high="32" text="Sunny" code="32" />
+            <yweather:forecast day="Sun" date="31 May 2015" low="20" high="37" text="Sunny" code="32" />
+        </item>
+    </channel>
+</rss>
+'''
+```
+
+我们需要的信息有三样，分别是地点、当天天气和次日天气。在这段XML中，地点可以从 `yweather:location` 标签的 `city` 属性和 `country` 属性中获得。当天天气从第一个 `yweather:forecast` 标签的 `text`、`low` 和 `high` 这三个属性获得。次日天气则在第二个 `yweather:forecast` 标签中。并且注意到，我们只需要编写处理 `start_element` 事件的函数就可以取出所有这些信息了。
+
+```python
+# -*- coding:utf-8 -*-
+
+from xml.parsers.expat import ParserCreate
+
+class WeatherSaxHandler(object):
+
+    def __init__(self):
+        self.result = dict()
+        self.count = 0
+        self.result['forecast'] = dict()
+
+    def start_element(self, name, attrs):
+        if name == 'yweather:location':
+            self.result['city'] = attrs['city']
+            self.result['country'] = attrs['country']
+        elif name == 'yweather:forecast':
+            if self.count == 0:
+                self.result['forecast']['today'] = attrs
+                self.count += 1
+            elif self.count == 1:
+                self.result['forecast']['tomorrow'] = attrs
+                self.count += 1
+
+
+def parse_weather(data):
+
+    handler = WeatherSaxHandler()
+    p = ParserCreate()
+    p.StartElementHandler = handler.start_element
+    p.Parse(data)
+
+    return {
+        'city': handler.result['city'],
+        'country': handler.result['country'],
+        'today': {
+            'text': handler.result['forecast']['today']['text'],
+            'low': int(handler.result['forecast']['today']['low']),
+            'high': int(handler.result['forecast']['today']['high'])
+        },
+        'tomorrow': {
+            'text': handler.result['forecast']['tomorrow']['text'],
+            'low': int(handler.result['forecast']['tomorrow']['low']),
+            'high': int(handler.result['forecast']['tomorrow']['high'])
+        }
+    }
+```
+
+
+```python
+# 测试:
+
+weather = parse_weather(data)
+assert weather['city'] == 'Beijing', weather['city']
+assert weather['country'] == 'China', weather['country']
+assert weather['today']['text'] == 'Partly Cloudy', weather['today']['text']
+assert weather['today']['low'] == 20, weather['today']['low']
+assert weather['today']['high'] == 33, weather['today']['high']
+assert weather['tomorrow']['text'] == 'Sunny', weather['tomorrow']['text']
+assert weather['tomorrow']['low'] == 21, weather['tomorrow']['low']
+assert weather['tomorrow']['high'] == 34, weather['tomorrow']['high']
+print('Weather:', str(weather))
+```
+
+---
+
+<br>
