--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1291,7 +1291,7 @@ return ''.join(L)
 
 ### 小结
 
-解析XML时，注意找出自己感兴趣的节点，响应事件时，可以先把节点中的数据保存起来，等待解析完毕后，再进行处理。对这一章所用模块知识感兴趣的话可以查看[官方文档](https://docs.python.org/3/library/pyexpat.html#module-xml.parsers.expat)。
+解析XML时，注意找出自己感兴趣的节点，响应事件时，可以先把节点中的数据保存起来，等待解析完毕后，再进行处理。对这一章所用模块知识感兴趣的话可以查看[官方文档](https://docs.python.org/3/library/pyexpat.html#module-xml.parsers.expat)。此外，觉得自带的XML库不够给力的话可以使用更为强大的**第三方库[lxml](http://lxml.de/)**。
 
 ---
 
@@ -1409,6 +1409,141 @@ print('Weather:', str(weather))
 HTML本质上是XML的子集，但是HTML的语法没有XML那么严格，所以不能用标准的DOM或SAX来解析HTML。
 
 好在Python提供了 `HTMLParser` 模块帮助我们解析HTML，非常方便，只需简单几行代码即可完成。
+
+---
+
+### HTML字符实体
+
+在学习 `HTMLParser` 之前，我们需要首先了解一下HTML需要注意的地方。**在HTML中，某些字符是预留的**。
+在HTML中不能使用小于号（`<`）和大于号（`>`），这是因为浏览器会误认为它们是标签符号。
+如果希望正确地显示预留字符，我们必须在HTML的源代码中使用**[字符实体（character entities）](http://www.w3school.com.cn/html/html_entities.asp)**。
+
+具体来说，常用的字符实体如下：
+
+<table class="dataintable">
+    <tbody><tr>
+      <th style="width:20%">显示结果</th>
+      <th style="width:20%">描述</th>
+      <th style="width:30%">实体名称</th>
+      <th style="width:30%">实体编号</th>
+    </tr>
+
+    <tr>
+      <td>&nbsp;</td>
+      <td>空格</td>
+      <td>&amp;nbsp;</td>
+      <td>&amp;#160;</td>
+    </tr>
+
+    <tr>
+      <td>&lt;</td>
+      <td>小于号</td>
+      <td>&amp;lt;</td>
+      <td>&amp;#60;</td>
+    </tr>
+
+    <tr>
+      <td>&gt;</td>
+      <td>大于号</td>
+      <td>&amp;gt;</td>
+      <td>&amp;#62;</td>
+    </tr>
+
+    <tr>
+      <td>&amp;</td>
+      <td>和号</td>
+      <td>&amp;amp;</td>
+      <td>&amp;#38;</td>
+    </tr>
+
+    <tr>
+      <td>"</td>
+      <td>引号</td>
+      <td>&amp;quot;</td>
+      <td>&amp;#34;</td>
+    </tr>
+
+    <tr>
+      <td>'</td>
+      <td>撇号&nbsp;</td>
+      <td>&amp;apos; (IE不支持)</td>
+      <td>&amp;#39;</td>
+    </tr>
+
+    <tr>
+      <td>￠</td>
+      <td>分（cent）</td>
+      <td>&amp;cent;</td>
+      <td>&amp;#162;</td>
+    </tr>
+
+    <tr>
+      <td>£</td>
+      <td>镑（pound）</td>
+      <td>&amp;pound;</td>
+      <td>&amp;#163;</td>
+    </tr>
+
+    <tr>
+      <td>¥</td>
+      <td>元（yen）</td>
+      <td>&amp;yen;</td>
+      <td>&amp;#165;</td>
+    </tr>
+
+    <tr>
+      <td>€</td>
+      <td>欧元（euro）</td>
+      <td>&amp;euro;</td>
+      <td>&amp;#8364;</td>
+    </tr>
+
+    <tr>
+      <td>§</td>
+      <td>小节</td>
+      <td>&amp;sect;</td>
+      <td>&amp;#167;</td>
+    </tr>
+
+    <tr>
+      <td>©</td>
+      <td>版权（copyright）</td>
+      <td>&amp;copy;</td>
+      <td>&amp;#169;</td>
+    </tr>
+
+    <tr>
+      <td>®</td>
+      <td>注册商标</td>
+      <td>&amp;reg;</td>
+      <td>&amp;#174;</td>
+    </tr>
+
+    <tr>
+      <td>™</td>
+      <td>商标</td>
+      <td>&amp;trade;</td>
+      <td>&amp;#8482;</td>
+    </tr>
+
+    <tr>
+      <td>×</td>
+      <td>乘号</td>
+      <td>&amp;times;</td>
+      <td>&amp;#215;</td>
+    </tr>
+
+    <tr>
+      <td>÷</td>
+      <td>除号</td>
+      <td>&amp;divide;</td>
+      <td>&amp;#247;</td>
+    </tr>
+</tbody></table>
+
+完整的字符实体表可以查看W3School的[HTML 实体符号参考手册](http://www.w3school.com.cn/tags/html_ref_entities.html)。
+
+注意到表格中有**实体名称**和**实体编号**两种形式，在编写HTML代码时这两种形式都是可以使用的。即字符实体既可以写作 `&entity_name;` 的形式，也可以写作 `&#entity_number;` 的形式。比如需要显示小于号时可以写作 `&lt;` 也可以写作 `&#60;`。使用实体名而不是编号的好处是，名称更易于记忆。不过坏处是，**浏览器也许并不支持所有实体名称（但对实体编号的支持却很好）**。特别地，**实体编号可以写作十进制形式，也可以写作十六进制形式**，`&#60` 等价于 `&#x3C`。
 
 ---
 
