My_Python_Notebook：HTMLParser-使用HTMLParser解析HTML

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1547,3 +1547,105 @@ HTML本质上是XML的子集，但是HTML的语法没有XML那么严格，所以
 
 ---
 
+### 使用HTMLParser解析HTML
+
+类似于XML的SAX解析方法，使用 `HTMLParser` 解析HTML时，我们只需要为不同的事件编写相应的处理函数就可以了。以下面的代码为例子：
+
+```python
+from html.parser import HTMLParser
+from html.entities import name2codepoint
+
+class MyHTMLParser(HTMLParser):
+
+    def handle_starttag(self, tag, attrs):
+        print('This is a start tag: %s' % tag)
+
+    def handle_endtag(self, tag):
+        print('This is an end tag: %s' % tag)
+
+    def handle_startendtag(self, tag, attrs):
+        print('This is a start-end tag: %s' % tag)
+
+    def handle_data(self, data):
+        print('This is data:', repr(data))
+
+    def handle_comment(self, data):
+        print('This is a comment:', data)
+
+    def handle_entityref(self, name):
+        print('This is a named character reference: %s' % chr(name2codepoint[name]))
+
+    def handle_charref(self, name):
+        if name.startswith('x'):
+            print('This is a numeric character reference: %s' % chr(int(name[1:], 16)))
+        else:
+            print('This is a numeric character reference: %s' % chr(int(name)))
+
+parser = MyHTMLParser(convert_charrefs=False)
+parser.feed(r'''
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Test</title>
+    </head>
+    <body>
+        <!-- test html parser -->
+        <p>My personal website is <a href="http://www.2wildkids.com/">www.2wildkids.com</a>. Welcome to visit it.</p>
+        <img src="http://oe0e8k1nf.bkt.clouddn.com/avator-lion.jpg" />
+        <p>&times; is a named character reference and &#215; is a numeric character reference.
+    </body>
+</html>''')
+```
+
+运行结果：
+
+```python
+This is data: '\n'
+This is data: '\n'
+This is a start tag: html
+This is data: '\n    '
+This is a start tag: head
+This is data: '\n        '
+This is a start tag: title
+This is data: 'Test'
+This is an end tag: title
+This is data: '\n    '
+This is an end tag: head
+This is data: '\n    '
+This is a start tag: body
+This is data: '\n        '
+This is a comment:  test html parser
+This is data: '\n        '
+This is a start tag: p
+This is data: 'My personal website is '
+This is a start tag: a
+This is data: 'www.2wildkids.com'
+This is an end tag: a
+This is data: '. Welcome to visit it.'
+This is an end tag: p
+This is data: '\n        '
+This is a start-end tag: img
+This is data: '\n        '
+This is a start tag: p
+This is a named character reference: ×
+This is data: ' is a named character reference and '
+This is a numeric character reference: ×;
+This is data: ' is a numeric character reference.\n    '
+This is an end tag: body
+This is data: '\n'
+This is an end tag: html
+```
+
+`feed()` 方法可以多次调用，所以HTML字符串可以一部分一部分地塞进去，而无需一次传入完整的HTML文档。
+
+代码比较简单，不需要过多地讲解。有几个小知识点需要注意一下：
+
+- HTML中每个标签可能会有一些属性，比如 `<img>` 标签的 `src` 属性还有大小属性等等，这些属性传入事件处理函数时，会被整合到一个元组（`attrs` 参数）中，每个属性会以键值对的形式被存放在这个元组里。
+- 处理实体名称需要 `name2codepoint` 这个字典，注意导入的方式。它可以将实体名称映射为十进制code point，然后再使用 `chr()` 函数就能得到对应的Unicode字符了。
+- 处理实体编号需要先判断使用了十进制表示形式还是十六进制表示形式。
+
+
+还有一个问题，因为廖老师教程中使用的是Python3的早期版本，在早期版本中，`HTMLParser`类初始化时 `convert_charrefs` 参数默认是 `False`，不会把HTML字符串中的字符实体转换为Unicode字符。而在Python3.5版本中，这一参数被修改为默认是 `True`，所以传入HTML字符串时会自动进行转换，转换后自然就无法触发 `handle_entityref()` 事件和 `handle_charref()` 事件了。这个小问题刚开始也让我小卡了一下，在查看[官方文档](https://docs.python.org/3.5/library/html.parser.html?highlight=htmlparser)后终于解决了问题。
+
+---
+
