My_Python_Notebook：HTMLParser-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1649,3 +1649,9 @@ This is an end tag: html
 
 ---
 
+### 小结
+
+借助 `HTMLParser` 模块，我们可以非常方便地把网页中的文本、图像等解析出来。此外，我们也可以使用更为强大的[第三方库 `BeautifulSoup`](https://www.crummy.com/software/BeautifulSoup/bs4/doc/index.zh.html)。
+
+---
+
