My_Python_Notebook：urllib-简介

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1773,3 +1773,13 @@ with open(r'E:\wheels\learnpython\My_Python_Notebook\Res\Our Events _ Python.org
 ---
 
 <br>
+
+## urllib
+
+### 简介
+
+`urllib` 库提供了一系列用于操作URL的功能。
+
+---
+
+
