My_Python_Notebook：urllib-get

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1782,4 +1782,60 @@ with open(r'E:\wheels\learnpython\My_Python_Notebook\Res\Our Events _ Python.org
 
 ---
 
+### Get
+
+`urllib` 的 `request` 模块可以非常方便地抓取URL内容，`urlopen()` 函数首先发送一个GET请求到指定的页面，然后返回HTTP的响应。比方说，对豆瓣的一个URL（[https://api.douban.com/v2/book/2129650](https://api.douban.com/v2/book/2129650)）进行抓取，并返回响应：
+
+```python
+from urllib import request
+
+with request.urlopen('https://api.douban.com/v2/book/2129650') as f:
+    data = f.read()
+    print('Status:', f.status, f.reason)
+    for k, v in f.getheaders():
+        print('%s: %s' % (k, v))
+    print('Data:', data.decode('utf-8'))
+```
+
+可以看到HTTP响应状态，header，以及返回的JSON数据：
+
+```python
+Status: 200 OK
+Server: nginx
+Date: Tue, 26 May 2015 10:02:27 GMT
+Content-Type: application/json; charset=utf-8
+Content-Length: 2049
+Connection: close
+Expires: Sun, 1 Jan 2006 01:00:00 GMT
+Pragma: no-cache
+Cache-Control: must-revalidate, no-cache, private
+X-DAE-Node: pidl1
+Data: {"rating":{"max":10,"numRaters":16,"average":"7.4","min":0},"subtitle":"","author":["廖雪峰编著"],"pubdate":"2007-6","tags":[{"count":20,"name":"spring","title":"spring"}...}
+```
+
+如果我们要想**模拟浏览器发送GET请求**，就需要使用 `Request` 对象，通过往 `Request` 对象添加HTTP头，我们就可以把请求伪装成浏览器。例如，模拟iPhone 6去请求豆瓣首页：
+
+```python
+from urllib import request
+
+req = request.Request('http://www.douban.com/')
+req.add_header('User-Agent', 'Mozilla/6.0 (iPhone; CPU iPhone OS 8_0 like Mac OS X) AppleWebKit/536.26 (KHTML, like Gecko) Version/8.0 Mobile/10A5376e Safari/8536.25')
+with request.urlopen(req) as f:
+    print('Status:', f.status, f.reason)
+    for k, v in f.getheaders():
+        print('%s: %s' % (k, v))
+    print('Data:', f.read().decode('utf-8'))
+```
+
+这样豆瓣会返回适合iPhone的移动版网页：
+
+```python
+...
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="apple-touch-icon" sizes="57x57" href="http://img4.douban.com/pics/cardkit/launcher/57.png" />
+...
+```
+
+---
 
