My_Python_Notebook：urllib-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1905,4 +1905,9 @@ with opener.open('http://www.example.com/login.html') as f:
 
 ---
 
+### 小结
+
+`urllib` 提供的功能就是利用程序去执行各种HTTP请求。如果要模拟浏览器完成特定功能，需要把请求伪装成浏览器。伪装的方法是先监控浏览器发出的请求，再根据浏览器的发出的请求中的header来伪装，User-Agent就是用来标识浏览器的。
+
+---
 
