My_Python_Notebook：urllib-练习

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -1911,3 +1911,72 @@ with opener.open('http://www.example.com/login.html') as f:
 
 ---
 
+### 练习
+
+> 利用 `urllib` 读取XML，将XML一节的天气预报数据由硬编码改为由 `urllib` 获取
+
+由于雅虎天气API已经跪了，这里改用百度天气API来尝试。
+
+接口例子：[http://api.map.baidu.com/telematics/v3/weather?location=广州&ak=8IoIaU655sQrs95uMWRWPDIa](http://api.map.baidu.com/telematics/v3/weather?location=广州&ak=8IoIaU655sQrs95uMWRWPDIa)
+
+代码：
+
+```python
+from urllib import request
+from xml.parsers.expat import ParserCreate
+
+class WeatherSaxHandler(object):
+
+    def __init__(self):
+        self.result = dict()
+        self.currentTag = '' #
+        self.flag = True
+    def start_element(self, name, attrs):
+        self.currentTag = name
+    def char_data(self, data):
+        if self.flag == True:
+            if self.currentTag == 'currentCity':
+                self.result['城市'] = data
+            elif self.currentTag == 'date':
+                self.result['当前'] = data
+            elif self.currentTag == 'weather':
+                self.result['天气'] = data
+            elif self.currentTag == 'wind':
+                self.result['风速'] = data
+            elif self.currentTag == 'temperature':
+                self.result['气温'] = data
+                self.flag = False
+            self.currentTag = '' # 记得每次解析完信息要重置
+
+
+def parse_weather(data):
+
+    handler = WeatherSaxHandler()
+    p = ParserCreate()
+    p.StartElementHandler = handler.start_element
+    p.CharacterDataHandler = handler.char_data
+    p.Parse(data)
+    return handler.result
+
+
+def fetch_xml(url):
+    with request.urlopen(url) as f:
+        data = f.read().decode('utf-8')
+        print('Status:', f.status, f.reason)
+        return parse_weather(data)
+
+# 测试
+print(fetch_xml('http://api.map.baidu.com/telematics/v3/weather?location=guangzhou&ak=8IoIaU655sQrs95uMWRWPDIa'))
+
+```
+
+运行结果：
+
+```python
+Status: 200 OK
+{'气温': '21 ~ 14℃', '城市': 'guangzhou', '风速': '微风', '当前': '周六 02月04日 (实时：19℃)', '天气': '小雨'}
+```
+
+---
+
+<br>
